--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
-  "homepage": "https://hunterwilkins.github.io/practiceReact",
   "version": "0.1.0",
+  "homepage" : "/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
