--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage" : "https://hunterwilkins.github.io/practiceReact/",
+  "homepage" : "https://hunterwilkins.github.io/practice-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
